# restr

./: .gitignore  .pylintrc  README.rst  pyproject.toml
common/: logger.py
restr/: __init__.py
restr/browser/: __init__.py  browser.py  browser_base.py  webdriver.py  window.py
scripts/: clear_logs.py
tests/: conftest.py
tests/browser/: __init__.py  test_browser.py  test_webdriver.py  test_window.py
tests/fixtures/: __init__.py  browser.py
